# guiding-eyes

./: README.md
algo/: CMakeLists.txt  camera-motor.cpp  create-dataset.cpp
librealsense/: CMakeLists.txt  camera-motor.cpp  imu-read  imu-read.cpp
librealsense/build2/: CMakeCache.txt  Makefile  camera-motor  cmake_install.cmake  compile_commands.json
librealsense/build3/: CMakeCache.txt  Makefile  camera-motor  cmake_install.cmake  compile_commands.json
librealsense/build4/: CMakeCache.txt  Makefile  camera-motor  cmake_install.cmake  compile_commands.json
libroyale-3.17.0.56-LINUX-arm-32Bit/: CHANGELOG.txt
libroyale-3.17.0.56-LINUX-arm-32Bit/dataRetrieve/: .retrieveData.cpp.swp  CMakeCache.txt  motorExample.py  motorExample2.py  retrieveData.cpp  sampleRetrieveData.cpp
libroyale-3.17.0.56-LINUX-arm-32Bit/driver/udev/: 10-royale-ubuntu.rules
libroyale-3.17.0.56-LINUX-arm-32Bit/include/royaleCAPI/: StatusCAPI.h
libroyale-3.17.0.56-LINUX-arm-32Bit/retrieveDataCV/: .CMakeLists.txt.swp  retrieveDataCV.cpp
libroyale-3.17.0.56-LINUX-arm-32Bit/samples/: .README_samples.md.swp  CMakeLists.txt  README_samples.md
libroyale-3.17.0.56-LINUX-arm-32Bit/samples/c/sampleCAPI/: sampleCAPI.c
libroyale-3.17.0.56-LINUX-arm-32Bit/samples/cpp/protoCameraIt1/: CMakeCache.txt  Makefile  cmake_install.cmake  sampleRetrieveData  sampleRetrieveData.cpp
libroyale-3.17.0.56-LINUX-arm-32Bit/samples/cpp/sampleCameraInfo/: sampleCameraInfo.cpp
libroyale-3.17.0.56-LINUX-arm-32Bit/samples/cpp/sampleExportPLY/: sampleExportPLY.cpp
libroyale-3.17.0.56-LINUX-arm-32Bit/samples/cpp/sampleMasterSlave/: CMakeLists.txt  sampleMasterSlave.cpp
libroyale-3.17.0.56-LINUX-arm-32Bit/samples/cpp/sampleOpenCV/: .sampleOpenCV.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
libroyale-3.17.0.56-LINUX-arm-32Bit/samples/cpp/sampleRetrieveData/: CMakeCache.txt  Makefile  cmake_install.cmake  sampleRetrieveData
libroyale-3.17.0.56-LINUX-arm-32Bit/share/: royale-config.cmake
read-bag/: CMakeLists.txt  camera-motor.cpp
read-bag/code-samples/: motor-control.cpp
working-code/: CMakeLists.txt  algo.cpp  camera-motor.cpp  read-bag.cpp
(+1 files in other folders)
